--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       height: 220px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid rgba(56,189,248,0.8);
-      box-shadow: 0 0 40px rgba(56,189,248,0.8);
+      border: 10px solid rgba(248, 56, 56, 0.8);
+      box-shadow: 0 0 60px rgba(248, 56, 56, 0.8);
       animation: float 5s ease-in-out infinite;
     }
 
@@ -153,7 +153,7 @@
 
 <section class="hero">
   <div class="hero-content">
-    <img src="https://i.ibb.co/0jzP0Zp/avatar.png" alt="Your Image" />
+    <img src="Myportfolioimage.jpeg" alt="Your Image" />
     <h1>SARAVANAN M</h1>
     <p>Software Engineer</p>
   </div>
